--- a/src/index.html
+++ b/src/index.html
@@ -17,17 +17,9 @@
       System.import('main.js').catch(function(err){ console.error(err); });
     </script>
   </head>
-  <body style="background-image: url('content/img/lighten-sm-d.jpg')">
+  <body style="background-image: url('content/img/lighten-smaller-d.jpg')">
     <div class="container">
-      <nav class="navbar navbar-light bg-faded">
-        <div class="top-line bg-primary"></div>
-        <a class="navbar-brand"><img src="content/img/science-logo.png" height="50px"/></a>
-        <div class="nav navbar-nav">
-          <a class="nav-item active nav-link" href="/">Home</a>
-        </div>
-      </nav>
-      <my-app></my-app>
-      <startor></startor>
+      <ffd-app></ffd-app>
     </div>
   </body>
 </html>
